tests/snapshots/examples_fixtures/guide_type_system__Guide__StrictApi.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_type_system/Guide/StrictApi.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Guide.StrictApi` doesn't match file path `examples/guide_type_system/Guide/StrictApi.flx`.

  examples/guide_type_system/Guide/StrictApi.flx:3:1
  |
3 | module Guide.StrictApi {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
